# PicoGuide

./: CMakeLists.txt  README.md
hello_multicore/: CMakeLists.txt  multicore.c
